--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Anju",
         "boxprint",
+        "fetchall",
         "Jobin",
         "Kiran",
         "Manoj",
@@ -12,6 +13,7 @@
         "UNLIST",
         "Varkey",
         "Vijayachandran",
-        "Vishal"
+        "Vishal",
+        "writerow"
     ]
 }
