--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "Priya",
         "Shaji",
         "UNLIST",
+        "Unlisting",
         "Varkey",
         "Vijayachandran",
         "Vishal",
